ingress/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: vending-dev
  annotations:
    # Tells Kubernetes to use Traefik to route this traffic
    kubernetes.io/ingress.class: traefik
    # Optional: Force Traefik to only listen on the web (port 80) entrypoint 
    # since Cloudflare is handling the HTTPS/SSL layer for you
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: pgadmin.jirivasm.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-db-postgresq # <-- UPDATE THIS TO YOUR PGADMIN SERVICE NAME
            port:
              number: 80 #
